--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,15 +2,16 @@
 @import "partials/mixin";
 
 
+*{
+    box-sizing: border-box;
+}
 
 *{
  margin:0;
  padding: 0;
 }
        
-body{
-    width: 100%;
-}
+
 
 header{
         display: grid;
